src/jquery.graylog2shell.css
#shell-container {
  clear: both;
  margin: 0px 15px;
  background-color: #000;
  padding: 5px;
  color: white;
}

#shell-container ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.shell-prompt {
  font-weight: bold;
  float:left;
}

.shell-command {
  padding: 0;
  border: 0;
  font-family: monospace;
  font-size: 14px;
}

.shell-loading {
  height: 16px;
  width: 16px;
  background: url(../images/loading_shell.gif) no-repeat;
  float: left;
  padding-right: 5px;
}

.shell-old-input {

}

.shell-error {

}

.shell-success {

}

